# hexcore-elixir

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  HANDBACK.md  LICENSE  README.md  SWARM_BRIEF.md  package-lock.json  package.json  roadmap.md
.cargo/: config.toml
agents/: package.json  tsconfig.json
agents/examples/: hook_malloc.ts
agents/src/: index.ts  interceptor.ts  memory.ts  process.ts  stalker.ts  types.ts
crates/elixir-core/: Cargo.toml  build.rs
crates/elixir-core/src/: emulator.rs  error.rs  ffi.rs  instrument.rs  lib.rs  loader.rs  os.rs  snapshot.rs  types.rs
crates/elixir-core/src/os/: linux.rs  macos.rs  windows.rs
crates/elixir-core/tests/: parity_gate_api_log_detail.rs  parity_gate_g1.rs  parity_gate_g3.rs  parity_gate_g4.rs  parity_gate_g5.rs  phase1_sanity.rs  phase2_loaders.rs  phase3_api_hooks.rs  phase4_instrumentation.rs
crates/hexcore-elixir/: Cargo.toml  index.d.ts  index.js
crates/hexcore-elixir/src/: lib.rs
engine/: CMakeLists.txt
engine/include/elixir/: elixir.h  engine_internal.h  interceptor.h  linux_stubs.h  linux_syscalls.h  memory_manager.h  stalker.h  win32_handler_extras.h  win32_hooks.h
engine/src/core/: engine.cpp  memory.cpp
engine/src/instrument/: interceptor.cpp  stalker.cpp
engine/src/loader/: elf_loader.cpp  format_detect.cpp  macho_loader.cpp  pe_loader.cpp
engine/src/os/linux/: linux_stubs.cpp  process.cpp  syscalls.cpp
engine/src/os/windows/: api_hooks.cpp  process.cpp  registry.cpp  syscalls.cpp
engine/src/vfs/: vfs.cpp
engine/tools/: elixir_tool.cpp
handoff/: GET_API_CALLS_STUB_FIX.md  README.md
handoff/fixtures/: README.md
handoff/specs/: CLEAN_ROOM.md  data-import-detection.md  msvc-crt-stub-contract.md  peb-ldr-data-layout.md  sab-ring-buffer-layout.md  win32-api-hooks.md
tests/: acceptance.js  repro_contaminated.js  repro_contaminated2.js  repro_debugger_host_pattern.js  repro_sequential.js  repro_tcg_contaminated.js  smoke_api_log_detail.js  smoke_error_path.js  smoke_seh_path.js
tests/fixtures/: 18-emulation-result.json  hello_world.cpp
