[workspace]
resolver = "2"
members = [
    "crates/elixir-core",
    "crates/hexcore-elixir",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AkashaCorporation/hexcore-elixir"

[workspace.dependencies]
# Core
thiserror = "2.0"
bitflags = "2.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NAPI-RS
napi = { version = "3.8", features = ["napi9", "serde-json"] }
napi-derive = "3.5"

# Internal
elixir-core = { path = "crates/elixir-core" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 1
